app/docs/data/docs/2.4/admin/index/page.mdx
# The API Platform Admin

![Screencast](images/admin-demo.gif)

API Platform Admin is a tool to automatically create a fancy (Material Design) and fully featured administration interface
for any API supporting [the Hydra Core Vocabulary](http://www.hydra-cg.com/), including but not limited to all APIs created
using [the API Platform framework](https://api-platform.com).

The generated administration is a 100% standalone Single-Page-Application with no coupling to the server part, according
to the API-first paradigm.

API Platform Admin parses the Hydra documentation then uses the awesome [React Admin](https://marmelab.com/react-admin/)
library (and [React](https://facebook.github.io/react/)) to expose a nice, responsive, management interface (Create-Retrieve-Update-Delete)
for all available resources.

You can also customize all screens by using React Admin components and even raw JavaScript/React code.

## Features

-   Automatically generates an admin interface for all the resources of the API thanks to hypermedia features of Hydra
-   Generates 'list', 'create', 'show', and 'edit' screens, as well as a delete button
-   Generates suitable inputs and fields according to the API doc (e.g. number HTML input for numbers, checkbox for booleans, selectbox for relationships...)
-   Generates suitable inputs and fields according to Schema.org types if available (e.g. email field for http://schema.org/email)
-   Handles relationships
-   Supports pagination
-   Automatically validates whether a field is mandatory client-side according to the API description
-   Sends proper HTTP requests to the API and decodes them using Hydra and JSON-LD formats
-   Nicely displays server-side errors (e.g. advanced validation)
-   **100% customizable**
